webpack scss compile　確認済み

--- a/_dev/index.html
+++ b/_dev/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Donatello</title>
+	<script src="assets/js/index.js"></script>
 </head>
 <body>
-	
+	aaaaa
 </body>
 </html>
