環境構築  | loader分割

--- a/_dev/index.html
+++ b/_dev/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Donatello</title>
-	<script src="assets/js/index.js"></script>
+	<link rel="stylesheet" href="assets/css/bundle.css">
+	<script src="assets/js/bundle.js"></script>
 </head>
 <body>
-	aaaaa
+	bb
 </body>
 </html>
