--- a/donatello.com/about/index.html
+++ b/donatello.com/about/index.html
@@ -37,10 +37,8 @@
       <meta name="twitter:image" content="">
       <link rel="shortcut icon" href=""> 
 </head>
-
 <body class="about">
       
-   
    <!-- ***** header  -->
    <header class="siteHeader">
       <div class="wrap">
@@ -135,7 +133,6 @@
    </div>
 </header>
    <!-- ///// header  -->
-
    <div id="fetchContent" data-content="about">
       <!-- ***** mainvisual -->
       <section class="headingArea">
@@ -150,10 +147,10 @@
          <canvas class="pattern">
          </section>
          <!-- ///// mainvisual  -->
-         <nav class="pageNav">
-            <ul class="">
-               <li class="pageNav_anchor"><a href="#philosophy">企業理念</a></li>
-               <li class="pageNav_anchor"><a href="#about">会社概要</a></li>               
+         <nav >
+            <ul class="pageNav">
+               <li class="pageNav_anchor"><a href="#philosophy">企業理念<svg version="1.1" class="arrow" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="32.231px" height="5.868px" viewBox="0 0 32.231 5.868"><polyline fill="none" stroke="#0C3FFF" stroke-miterlimit="10" points="0,5.368 30.948,5.368 25.508,0.368     "/></svg></a></li>
+               <li class="pageNav_anchor"><a href="#about">会社概要<svg version="1.1" class="arrow" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="32.231px" height="5.868px" viewBox="0 0 32.231 5.868"><polyline fill="none" stroke="#0C3FFF" stroke-miterlimit="10" points="0,5.368 30.948,5.368 25.508,0.368     "/></svg></a></li>               
             </ul>
          </nav>
          <!-- ***** BODY START -->
@@ -163,7 +160,7 @@
                <article>
                   <header class="section_index" data-en="philosophy">
                    <h3>
-                     <span class="section_index_en">PHILOSOPHY</span>
+                     <span class="section_index_en"><span>PHILOSOPHY</span></span>
                      <span class="section_index_ja">
                       企業理念
                    </span>
