--- a/donatello.com/recruit/index.html
+++ b/donatello.com/recruit/index.html
@@ -223,7 +223,7 @@
            </tr>          
         </table>
         <div class="toEntry">
-            <a href="" class="button -inquiry -toEntry"><button role="link" >エントリー</button><svg version="1.1" class="button_arrow" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="2px" viewBox="0 0 15 2"><polyline fill="none" stroke="#FFF" stroke-miterlimit="10" points="0,2 15,2 13,0"/></svg></a> 
+            <a href="" class="button -inquiry -toEnter"><button role="link" >エントリー</button><svg version="1.1" class="button_arrow" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="2px" viewBox="0 0 15 2"><polyline fill="none" stroke="#FFF" stroke-miterlimit="10" points="0,2 15,2 13,0"/></svg></a> 
             <aside class="toEntry_attention">
                メール画面が開きます。必要事項を記入してご送信下さいませ。<br>
                いただいた内容は厳重に管理し、3営業日以内に担当者よりご連絡いたします。
