--- a/donatello.com/inquiry/index.html
+++ b/donatello.com/inquiry/index.html
@@ -186,15 +186,15 @@
                   <p>
                      Donatelloの培ったスキルで、プロジェクトの成功、改善をバックアップいたします。<br>
                      まずはお気軽にお問い合わせくださいませ。
-
                   </p>
-
                   <div class="toEntry">
-                     <a href="" class="button -inquiry -toEnter"><button role="link" >お問合わせはこちら</button><svg version="1.1" class="button_arrow" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="2px" viewBox="0 0 15 2"><polyline fill="none" stroke="#FFF" stroke-miterlimit="10" points="0,2 15,2 13,0"/></svg></a> 
-                     <aside class="toEntry_attention">
-                        メール画面が開きます。必要事項を記入してご送信下さいませ。<br>
-                        いただいた内容は厳重に管理し、3営業日以内に担当者よりご連絡いたします。
-                     </aside>    
+                     <div class="wrap">
+                        <a href="" class="button -inquiry -toEnter"><button role="link" >お問合わせはこちら</button><svg version="1.1" class="button_arrow" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="2px" viewBox="0 0 15 2"><polyline fill="none" stroke="#FFF" stroke-miterlimit="10" points="0,2 15,2 13,0"/></svg></a> 
+                        <aside class="toEntry_attention">
+                           メール画面が開きます。必要事項を記入してご送信下さいませ。<br>
+                           いただいた内容は厳重に管理し、3営業日以内に担当者よりご連絡いたします。
+                        </aside>
+                     </div>
                   </div>
                </div>
             </article>
