common ナビゲーションリンク設定

--- a/donatello.com/works/index.html
+++ b/donatello.com/works/index.html
@@ -44,8 +44,7 @@
 <body class="works">
       
    <!-- ***** header  -->
-   
-<header class="siteHeader">
+   <header class="siteHeader">
       <div class="wrap">
          
          <h1 class="siteHeader_word">Donatello - 東京のSES、システム開発、エンジニア育成※さんぷる</h1>
@@ -132,8 +131,8 @@
       <nav class="siteHeader_nav">
          <ul class="nav">
             <li><a href="..//about/">会社概要</a></li>
-            <li><a href="..//fields/">事業内容</a></li>
-            <li><a href="..//works/">実績</a></li>
+            <li><a href="..//business/">事業内容</a></li>
+            <li class="current"><a href="..//works/">実績</a></li>
             <li><a href="..//recruit/">採用情報</a></li>
             <li><a href="..//inquiry/">お問い合わせ</a></li>
          </ul>
@@ -494,7 +493,7 @@
                <nav class="siteFooter_nav">
                   <ul class="nav">
                      <li><a href="..//about/">会社概要</a></li>
-                     <li><a href="..//fields/">事業内容</a></li>
+                     <li><a href="..//business/">事業内容</a></li>
                      <li><a href="..//works/">実績</a></li>
                      <li><a href="..//recruit/">採用情報</a></li>
                      <li><a href="..//inquiry/">お問い合わせ</a></li>
@@ -504,11 +503,9 @@
             <footer class="siteFooter_copyright">
                &copy; Donatello co.ltd, All Rights Reserved.
             </footer>
-
          </div>
       </footer>         
       <div class="backToTop"><i></i></div>
-
 <!-- ***** menu button -->
 <div class="navToggle"><svg version="1.1" class="navToggle_hitArea" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50px" height="56.253px" viewBox="0 0 52 56.253" enable-background="new 0 0 50 56.253" xml:space="preserve"><path class="navToggle_oct" d="M0,16.229c0-1.247,1.052-2.774,2.133-3.395L22.951,0.927c1.081-0.621,2.892-0.621,3.972,0l20.924,11.907 C48.928,13.455,50,14.983,50,16.229v23.794c0,1.247-1.051,2.774-2.133,3.395L27.049,55.326c-1.081,0.621-2.891,0.621-3.972,0 L2.153,43.418C1.072,42.798,0,41.27,0,40.023V16.229z"/><g><line class="navToggle_hitArea_line -lineTop" stroke-width="2" stroke-miterlimit="10" x1="15" y1="19.769" x2="34" y2="19.769"/><line class="navToggle_hitArea_line -lineCenter" stroke-width="2" stroke-miterlimit="10" x1="15" y1="28.769" x2="34" y2="28.769"/><line class="navToggle_hitArea_line -lineButtom" stroke-width="2" stroke-miterlimit="10" x1="15" y1="37.769" x2="34" y2="37.769"/></g></svg></div>
 <!-- //// menu button -->
