--- a/donatello.com/about/index.html
+++ b/donatello.com/about/index.html
@@ -128,7 +128,7 @@
       <nav class="siteHeader_nav">
          <ul class="nav">
             <li><a href="..//about/">会社概要</a></li>
-            <li><a href="..//fields/">事業内容</a></li>
+            <li><a href="..//business/">事業内容</a></li>
             <li><a href="..//works/">実績</a></li>
             <li><a href="..//recruit/">採用情報</a></li>
             <li><a href="..//inquiry/">お問い合わせ</a></li>
@@ -351,7 +351,7 @@
                <nav class="siteFooter_nav">
                   <ul class="nav">
                      <li><a href="..//about/">会社概要</a></li>
-                     <li><a href="..//fields/">事業内容</a></li>
+                     <li><a href="..//business/">事業内容</a></li>
                      <li><a href="..//works/">実績</a></li>
                      <li><a href="..//recruit/">採用情報</a></li>
                      <li><a href="..//inquiry/">お問い合わせ</a></li>
