comon pjz 動作確認中

--- a/donatello.com/recruit/index.html
+++ b/donatello.com/recruit/index.html
@@ -126,11 +126,11 @@
       </p>
       <nav class="siteHeader_nav">
          <ul class="nav">
-            <li><a href="..//about/">会社概要</a></li>
-            <li><a href="..//business/">事業内容</a></li>
-            <li><a href="..//works/">実績</a></li>
-            <li class="current"><a href="..//recruit/">採用情報</a></li>
-            <li><a href="..//inquiry/">お問い合わせ</a></li>
+            <li><a href="/about/">会社概要</a></li>
+            <li><a href="/business/">事業内容</a></li>
+            <li><a href="/works/">実績</a></li>
+            <li class="current"><a href="/recruit/">採用情報</a></li>
+            <li><a href="/inquiry/">お問い合わせ</a></li>
          </ul>
       </nav>
    </div>
@@ -273,11 +273,11 @@
             <section>
                <nav class="siteFooter_nav">
                   <ul class="nav">
-                     <li><a href="..//about/">会社概要</a></li>
-                     <li><a href="..//business/">事業内容</a></li>
-                     <li><a href="..//works/">実績</a></li>
-                     <li><a href="..//recruit/">採用情報</a></li>
-                     <li><a href="..//inquiry/">お問い合わせ</a></li>
+                     <li><a href="/about/">会社概要</a></li>
+                     <li><a href="/business/">事業内容</a></li>
+                     <li><a href="/works/">実績</a></li>
+                     <li><a href="/recruit/">採用情報</a></li>
+                     <li><a href="/inquiry/">お問い合わせ</a></li>
                   </ul>                  
                </nav>
             </section>
