--- a/donatello.com/about/index.html
+++ b/donatello.com/about/index.html
@@ -318,6 +318,7 @@
             <li><a href="https://twitter.com/donatello04" target="_blank" class="icon-twitter"></a></li>
             <li><a href="https://www.facebook.com/%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BEDonatello-1103021019747652/" target="_blank" class="icon-facebook"></a></li>
          </ul>
+         <div class="backToTop"><img src="../common/img/icon-arrow-backtotop.svg" width="7" alt=""></div>      
       </section>
       <!-- ///// sns -->
       <footer class="siteFooter">
@@ -362,7 +363,7 @@
             </footer>
          </div>
       </footer>         
-      <div class="backToTop"><i></i></div>
+
 
    <!-- ***** menu button -->
    <div class="navToggle"><svg version="1.1" class="navToggle_hitArea" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50px" height="56.253px" viewBox="0 0 52 56.253" enable-background="new 0 0 50 56.253" xml:space="preserve"><path class="navToggle_oct" d="M0,16.229c0-1.247,1.052-2.774,2.133-3.395L22.951,0.927c1.081-0.621,2.892-0.621,3.972,0l20.924,11.907 C48.928,13.455,50,14.983,50,16.229v23.794c0,1.247-1.051,2.774-2.133,3.395L27.049,55.326c-1.081,0.621-2.891,0.621-3.972,0 L2.153,43.418C1.072,42.798,0,41.27,0,40.023V16.229z"/><g><line class="navToggle_hitArea_line -lineTop" stroke-width="2" stroke-miterlimit="10" x1="15" y1="19.769" x2="34" y2="19.769"/><line class="navToggle_hitArea_line -lineCenter" stroke-width="2" stroke-miterlimit="10" x1="15" y1="28.769" x2="34" y2="28.769"/><line class="navToggle_hitArea_line -lineButtom" stroke-width="2" stroke-miterlimit="10" x1="15" y1="37.769" x2="34" y2="37.769"/></g></svg></div>
