pjax pjaxをアップデート。稀にエラーまだ出る

--- a/donatello.com/index.html
+++ b/donatello.com/index.html
@@ -39,9 +39,9 @@
       <meta name="twitter:title" content="">
       <meta name="twitter:description" content="twitter: des">
       <meta name="twitter:image" content="">
-      <link rel="shortcut icon" href=""> 
-   </head>
+      <link rel="shortcut icon" href="">
 
+   </head>
    <body class="index">
          
    
@@ -300,14 +300,14 @@
 src="https://code.jquery.com/jquery-3.2.1.min.js"
 integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 crossorigin="anonymous"></script>
+<script src="https://cdn.polyfill.io/v2/polyfill.js?features=default,WeakMap,WeakSet,Array.prototype.findIndex,Array.prototype.@@iterator"></script>
 <script type="text/javascript" src="common/js/pjax/spica.js"></script>
-<script type="text/javascript" src="common/js/pjax/localsocket.js"></script>
 <script type="text/javascript" src="common/js/pjax/pjax-api.js"></script>
 <script type="text/javascript" src="common/js/pjax/config.js"></script>
 
-<script type="text/javascript" src="common/js/slick/slick.min.js"></script>
+   <script type="text/javascript" src="common/js/slick/slick.min.js"></script>
  
-<script type="text/javascript" src="common/js/common.js"></script>
+<script id="commonScript" type="text/javascript" src="common/js/common.js"></script>
    
 <!-- /////scripts -->
    </body>
