--- a/donatello.com/inquiry/index.html
+++ b/donatello.com/inquiry/index.html
@@ -35,7 +35,8 @@
       <meta name="twitter:title" content="">
       <meta name="twitter:description" content="twitter: des">
       <meta name="twitter:image" content="">
-      <link rel="shortcut icon" href=""> 
+      <link rel="shortcut icon" href="">
+
 </head>
 <body class="inquiry">
       
@@ -265,12 +266,12 @@
 src="https://code.jquery.com/jquery-3.2.1.min.js"
 integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 crossorigin="anonymous"></script>
+<script src="https://cdn.polyfill.io/v2/polyfill.js?features=default,WeakMap,WeakSet,Array.prototype.findIndex,Array.prototype.@@iterator"></script>
 <script type="text/javascript" src="../common/js/pjax/spica.js"></script>
-<script type="text/javascript" src="../common/js/pjax/localsocket.js"></script>
 <script type="text/javascript" src="../common/js/pjax/pjax-api.js"></script>
 <script type="text/javascript" src="../common/js/pjax/config.js"></script>
  
-<script type="text/javascript" src="../common/js/common.js"></script>
+<script id="commonScript" type="text/javascript" src="../common/js/common.js"></script>
    
 <!-- /////scripts -->
    </body>
