--- a/donatello.com/index.html
+++ b/donatello.com/index.html
@@ -186,6 +186,7 @@
                業務効率化・属人的ミスを軽減するための<br class="spShow">最適なシステムを提案いたします。
             </p>
          </div>
+         <canvas class="pattern"></canvas>
       </section>
       <!-- ***** BODY START -->
       <main class="main">
