pjax common canvas閉じタグがないことが原因と推測したが誤り

--- a/donatello.com/about/index.html
+++ b/donatello.com/about/index.html
@@ -47,7 +47,7 @@
          <h1 class="siteHeader_word">Donatello - 東京のSES、システム開発、エンジニア育成※さんぷる</h1>
          
          <p class="siteHeader_logo">
-            <a href="../">
+            <a href="/">
                <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="150px" height="20px" viewBox="0 0 150 20" enable-background="new 0 0 150 20" xml:space="preserve">
                   <g>
                      <g>
@@ -139,18 +139,20 @@
    <!-- ///// header  -->
    <div id="fetchContent" data-content="about">
       <!-- ***** mainvisual -->
-      <section class="headingArea">
-         <div class="wrap">
-            <div class="headingArea_copy">
-               <p class="headingArea_copy_en">
-                  ABOUT
-               </p>
-               <h2 class="headingArea_copy_ja">会社概要</h2>
-            </div>
-         </div>
-         <canvas class="pattern">
-         </section>
-         <!-- ///// mainvisual  -->
+      <!-- ***** mainvisual -->
+<section class="headingArea">
+   <div class="wrap">
+      <div class="headingArea_copy">
+         <p class="headingArea_copy_en">
+            ABOUT
+         </p>
+         <h2 class="headingArea_copy_ja">会社概要</h2>
+      </div>
+   </div>
+   <canvas class="pattern"></canvas>
+</section>
+<!-- ///// mainvisual  -->
+      <!-- ///// mainvisual  -->
          <nav >
             <ul class="pageNav">
                <li class="pageNav_anchor"><a href="#philosophy">企業理念<svg version="1.1" class="arrow" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="32.231px" height="5.868px" viewBox="0 0 32.231 5.868"><polyline fill="none" stroke="#0C3FFF" stroke-miterlimit="10" points="0,5.368 30.948,5.368 25.508,0.368     "/></svg></a></li>
