--- a/donatello.com/index.html
+++ b/donatello.com/index.html
@@ -50,7 +50,7 @@
       <div class="wrap">
          
          <p class="siteHeader_logo">
-            <a href="">
+            <a href="/">
                <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="150px" height="20px" viewBox="0 0 150 20" enable-background="new 0 0 150 20" xml:space="preserve">
                   <g>
                      <g>
@@ -153,7 +153,7 @@
                   <h2 class="mainvisual_copy_ja">未来を拓くエンジニアスキル</h2>
                </div>
             </div>
-            <canvas class="mainvisual_graphic">
+            <canvas class="mainvisual_graphic"></canvas>
          </section>
          <!-- ///// mainvisual  -->
          <section class="topics">
@@ -181,7 +181,7 @@
                <header class="introduction_index ef ef-dup">
                   <h3>"DEVELOP FOR THE FURUTE."</h3>
                </header>
-               <p class="introduction_content ef ef-floatup" data-delay='0.2' >
+               <p class="introduction_content">
                   私たち、株式会社Donatelloは、<br>お客様の業務を分析し、<br class="spShow">受託システム開発・SESを通じ<br>
                   業務効率化・属人的ミスを軽減するための<br class="spShow">最適なシステムを提案いたします。
                </p>
