--- a/donatello.com/recruit/index.html
+++ b/donatello.com/recruit/index.html
@@ -47,7 +47,7 @@
          <h1 class="siteHeader_word">Donatello - 東京のSES、システム開発、エンジニア育成※さんぷる</h1>
          
          <p class="siteHeader_logo">
-            <a href="../">
+            <a href="/">
                <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="150px" height="20px" viewBox="0 0 150 20" enable-background="new 0 0 150 20" xml:space="preserve">
                   <g>
                      <g>
@@ -149,7 +149,7 @@
          <h2 class="headingArea_copy_ja">採用情報</h2>
       </div>
    </div>
-   <canvas class="pattern">
+   <canvas class="pattern"></canvas>
 </section>
 <!-- ///// mainvisual  -->
   <!-- ///// mainvisual  -->
