メインヴィジュアルアニメDOM実装

--- a/donatello.com/index.html
+++ b/donatello.com/index.html
@@ -41,10 +41,8 @@
       <meta name="twitter:image" content="">
       <link rel="shortcut icon" href=""> 
    </head>
-
    <body class="index">
-         
-   
+      <div id="loadingAnim"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 483.013 483.013" xml:space="preserve"> <path id="targetPath" class="loadingAnim_path" d="M477.043,219.205L378.575,48.677c-7.974-13.802-22.683-22.292-38.607-22.292H143.041c-15.923,0-30.628,8.49-38.608,22.292 L5.971,219.205c-7.961,13.801-7.961,30.785,0,44.588l98.462,170.543c7.98,13.802,22.685,22.293,38.608,22.293h196.926 c15.925,0,30.634-8.491,38.607-22.293l98.469-170.543C485.003,249.99,485.003,233.006,477.043,219.205z"/><text class="loadnigAnim_text" x="40" >LOADING..</text><circle class="loadingAnim_circle" cx="0" cy="0" r="20"><animateMotion dur="3s" repeatCount="indefinite"><mpath xlink:href="#targetPath"></mpath></animateMotion></circle> </svg></div>   
       <!-- ***** header  -->
       <header class="siteHeader">
       <div class="wrap">
@@ -140,106 +138,118 @@
    </div>
 </header>
       <!-- ///// header  -->
-
       <div id="fetchContent" data-content="index">
-   <!-- ***** mainvisual -->
-   <section class="mainvisual">
-      <div class="wrap">
-         <div class="mainvisual_copy">
-            <p class="mainvisual_copy_en">
-               <span class="firstRow">DEVELOP</span><span class="secondRow">FOR THE</span>
-               <span class="lastRow">FUTURE.</span>
-            </p>
-            <h2 class="mainvisual_copy_ja">未来を拓くエンジニアスキル</h2>
-         </div>
-      </div>
-      <canvas class="mainvisual_graphic">
-      </section>
-      <!-- ///// mainvisual  -->
-      <section class="topics">
+      <!-- ***** mainvisual -->
+      <section class="mainvisual">
          <div class="wrap">
-            <div id="topicsWrapper">
-               <div class="update">
-                  <a href="">
-                     <dl>
-                        <dt class="update_date">2017.12.15</dt><dd class="update_info">アップデート情報</dd>
-                     </dl>
-                  </a>
-               </div>
-               <div class="update">
-                  <a href="">
-                     <dl>
-                        <dt class="update_date">2017.12.31</dt><dd class="update_info">アップデート情報</dd>
-                     </dl>
-                  </a>
-               </div>         
+            <div class="mainvisual_copy">
+               <p class="mainvisual_copy_en">
+                  <span class="firstRow">DEVELOP</span><span class="secondRow">FOR THE</span>
+                  <span class="lastRow">FUTURE.</span>
+               </p>
+               <h2 class="mainvisual_copy_ja">未来を拓くエンジニアスキル</h2>
             </div>
          </div>
-      </section>
-      <section class="introduction">
-         <div class="wrap">
-            <header class="introduction_index ef ef-dup">
-               <h3>"DEVELOP FOR THE FURUTE."</h3>
-            </header>
-            <p class="introduction_content ef ef-floatup" data-delay='0.2' >
-               私たち、株式会社Donatelloは、<br>お客様の業務を分析し、<br class="spShow">受託システム開発・SESを通じ<br>
-               業務効率化・属人的ミスを軽減するための<br class="spShow">最適なシステムを提案いたします。
-            </p>
+         <!-- **** -->
+         <div class="mainvisual_graphic" id="city">
+            <i class="airplane"></i>
+            <div class="cloud">
+               <i class="cloud_1"></i>
+               <i class="cloud_2"></i>
+               <i class="cloud_3"></i>
+            </div>
+            <div class="building">
+               <i class="building_front"></i>
+               <i class="building_behind"></i>
+            </div>
          </div>
-         <canvas class="pattern"></canvas>
-      </section>
-      <!-- ***** BODY START -->
-      <main class="main">
-         <div class="wrap">
-            <nav >
-               <ul class="siteMap">
-                  <li >
-                     <a href="index.html">
-                        <p class="siteMap_en">
-                           ABOUT
-                        </p>
-                        <h3 class="siteMap_ja">
-                           会社概要
-                        </h3>
+         <!-- //// -->
+         <!-- <canvas id="city" class="mainvisual_graphic"></canvas> -->
+         </section>
+         <!-- ///// mainvisual  -->
+         <section class="topics">
+            <div class="wrap">
+               <div id="topicsWrapper">
+                  <div class="update">
+                     <a href="">
+                        <dl>
+                           <dt class="update_date">2017.12.15</dt><dd class="update_info">アップデート情報</dd>
+                        </dl>
                      </a>
-                  </li>
-                  <li >
-                     <a href="index.html">
-                        <p class="siteMap_en">
-                           BUSINESS
-                        </p>
-                        <h3 class="siteMap_ja">
-                           事業内容
-                        </h3>
+                  </div>
+                  <div class="update">
+                     <a href="">
+                        <dl>
+                           <dt class="update_date">2017.12.31</dt><dd class="update_info">アップデート情報</dd>
+                        </dl>
                      </a>
-                  </li>
-                  <li >
-                     <a href="index.html">
-                        <p class="siteMap_en">
-                           WORKS
-                        </p>
-                        <h3 class="siteMap_ja">
-                           実績
-                        </h3>
-                     </a>
-                  </li>
-                  <li >
-                     <a href="index.html">
-                        <p class="siteMap_en">
-                           RECRUIT
-                        </p>
-                        <h3 class="siteMap_ja">
-                           採用情報
-                        </h3>
-                     </a>
-                  </li>               
-               </ul>
-            </nav>
-         </div>
-      </main>
-      <!-- //// BODY END -->
-     
-           <!-- ***** sns -->
+                  </div>         
+               </div>
+            </div>
+         </section>
+         <section class="introduction">
+            <div class="wrap">
+               <header class="introduction_index ef ef-dup">
+                  <h3>"DEVELOP FOR THE FURUTE."</h3>
+               </header>
+               <p class="introduction_content ef ef-floatup" data-delay='0.2' >
+                  私たち、株式会社Donatelloは、<br>お客様の業務を分析し、<br class="spShow">受託システム開発・SESを通じ<br>
+                  業務効率化・属人的ミスを軽減するための<br class="spShow">最適なシステムを提案いたします。
+               </p>
+            </div>
+            <canvas class="pattern"></canvas>
+         </section>
+         <!-- ***** BODY START -->
+         <main class="main">
+            <div class="wrap">
+               <nav >
+                  <ul class="siteMap">
+                     <li >
+                        <a href="index.html">
+                           <p class="siteMap_en">
+                              ABOUT
+                           </p>
+                           <h3 class="siteMap_ja">
+                              会社概要
+                           </h3>
+                        </a>
+                     </li>
+                     <li >
+                        <a href="index.html">
+                           <p class="siteMap_en">
+                              BUSINESS
+                           </p>
+                           <h3 class="siteMap_ja">
+                              事業内容
+                           </h3>
+                        </a>
+                     </li>
+                     <li >
+                        <a href="index.html">
+                           <p class="siteMap_en">
+                              WORKS
+                           </p>
+                           <h3 class="siteMap_ja">
+                              実績
+                           </h3>
+                        </a>
+                     </li>
+                     <li >
+                        <a href="index.html">
+                           <p class="siteMap_en">
+                              RECRUIT
+                           </p>
+                           <h3 class="siteMap_ja">
+                              採用情報
+                           </h3>
+                        </a>
+                     </li>               
+                  </ul>
+               </nav>
+            </div>
+         </main>
+         <!-- //// BODY END -->
+              <!-- ***** sns -->
       <section class="sns">
          <ul class="snsList">
             <li><a href="https://twitter.com/donatello04" target="_blank" class="icon-twitter"></a></li>
@@ -291,12 +301,10 @@
          </div>
       </footer>         
 
-
-      <!-- ***** menu button -->
-      <div class="navToggle"><svg version="1.1" class="navToggle_hitArea" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50px" height="56.253px" viewBox="0 0 52 56.253" enable-background="new 0 0 50 56.253" xml:space="preserve"><path class="navToggle_oct" d="M0,16.229c0-1.247,1.052-2.774,2.133-3.395L22.951,0.927c1.081-0.621,2.892-0.621,3.972,0l20.924,11.907 C48.928,13.455,50,14.983,50,16.229v23.794c0,1.247-1.051,2.774-2.133,3.395L27.049,55.326c-1.081,0.621-2.891,0.621-3.972,0 L2.153,43.418C1.072,42.798,0,41.27,0,40.023V16.229z"/><g><line class="navToggle_hitArea_line -lineTop" stroke-width="2" stroke-miterlimit="10" x1="15" y1="19.769" x2="34" y2="19.769"/><line class="navToggle_hitArea_line -lineCenter" stroke-width="2" stroke-miterlimit="10" x1="15" y1="28.769" x2="34" y2="28.769"/><line class="navToggle_hitArea_line -lineButtom" stroke-width="2" stroke-miterlimit="10" x1="15" y1="37.769" x2="34" y2="37.769"/></g></svg></div>
-      <!-- //// menu button -->
-
-      <!-- *****scripts -->
+         <!-- ***** menu button -->
+         <div class="navToggle"><svg version="1.1" class="navToggle_hitArea" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50px" height="56.253px" viewBox="0 0 52 56.253" enable-background="new 0 0 50 56.253" xml:space="preserve"><path class="navToggle_oct" d="M0,16.229c0-1.247,1.052-2.774,2.133-3.395L22.951,0.927c1.081-0.621,2.892-0.621,3.972,0l20.924,11.907 C48.928,13.455,50,14.983,50,16.229v23.794c0,1.247-1.051,2.774-2.133,3.395L27.049,55.326c-1.081,0.621-2.891,0.621-3.972,0 L2.153,43.418C1.072,42.798,0,41.27,0,40.023V16.229z"/><g><line class="navToggle_hitArea_line -lineTop" stroke-width="2" stroke-miterlimit="10" x1="15" y1="19.769" x2="34" y2="19.769"/><line class="navToggle_hitArea_line -lineCenter" stroke-width="2" stroke-miterlimit="10" x1="15" y1="28.769" x2="34" y2="28.769"/><line class="navToggle_hitArea_line -lineButtom" stroke-width="2" stroke-miterlimit="10" x1="15" y1="37.769" x2="34" y2="37.769"/></g></svg></div>
+         <!-- //// menu button -->
+         <!-- *****scripts -->
 
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>      
       <script
