--- a/donatello.com/index.html
+++ b/donatello.com/index.html
@@ -42,7 +42,7 @@
       <link rel="shortcut icon" href=""> 
    </head>
    <body class="index">
-      <div id="loadingAnim"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 483.013 483.013" xml:space="preserve"> <path id="targetPath" class="loadingAnim_path" d="M477.043,219.205L378.575,48.677c-7.974-13.802-22.683-22.292-38.607-22.292H143.041c-15.923,0-30.628,8.49-38.608,22.292 L5.971,219.205c-7.961,13.801-7.961,30.785,0,44.588l98.462,170.543c7.98,13.802,22.685,22.293,38.608,22.293h196.926 c15.925,0,30.634-8.491,38.607-22.293l98.469-170.543C485.003,249.99,485.003,233.006,477.043,219.205z"/><text class="loadnigAnim_text" x="40" >LOADING..</text><circle class="loadingAnim_circle" cx="0" cy="0" r="20"><animateMotion dur="3s" repeatCount="indefinite"><mpath xlink:href="#targetPath"></mpath></animateMotion></circle> </svg></div>   
+      <div id="loadingAnim"><svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="90.302px" height="100px" viewBox="0 0 90.302 100" enable-background="new 0 0 90.302 100" xml:space="preserve"><path id="targetPath" class="loadingAnim_path" d="M45.151,2.91c-2.152,0-4.298,0.466-5.924,1.41L8.552,22.028c-3.258,1.881-5.925,6.499-5.925,10.261v35.423 c0,3.762,2.667,8.38,5.925,10.261l30.674,17.709c1.626,0.943, .772,1.408,5.924,1.408c2.146,0,4.293-0.465,5.924-1.408 l30.67-17.709c3.263-1.881,5.93-6.499,5.93-10.261V32.289c0-.762-2.667-8.38-5.93-10.261L51.075,4.319 C49.444,3.375,47.296,2.91,45.151,2.91L45.151,2.91z"/><text class="loadnigAnim_text" x="46.5" y="55" text-anchor="middle">LOADING..</text><circle class="loadingAnim_circle" cx="0" cy="0" r="5"><animateMotion dur="3s" repeatCount="indefinite"><mpath xlink:href="#targetPath"></mpath></animateMotion></circle></svg></div>   
       <!-- ***** header  -->
       <header class="siteHeader">
       <div class="wrap">
@@ -147,7 +147,7 @@
                   <span class="firstRow">DEVELOP</span><span class="secondRow">FOR THE</span>
                   <span class="lastRow">FUTURE.</span>
                </p>
-               <h2 class="mainvisual_copy_ja">未来を拓くエンジニアスキル</h2>
+               <h2 class="mainvisual_copy_ja">未来を拓くエンジニアスキル。</h2>
             </div>
          </div>
          <!-- **** -->
