ソース改行修正

--- a/donatello.com/index.html
+++ b/donatello.com/index.html
@@ -8,7 +8,7 @@
       
 
    <head>
-     <meta charset="UTF-8">     
+          <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=Edge"> 
       <meta name="viewport" content="width=device-width,user-scalable=yes,initial-scale=1"> 
       <!-- ***** my style -->
@@ -205,7 +205,7 @@
                <nav >
                   <ul class="siteMap">
                      <li >
-                        <a href="index.html">
+                        <a href="/about/index.html">
                            <p class="siteMap_en">
                               ABOUT
                            </p>
@@ -215,7 +215,7 @@
                         </a>
                      </li>
                      <li >
-                        <a href="index.html">
+                        <a href="/business/index.html">
                            <p class="siteMap_en">
                               BUSINESS
                            </p>
@@ -225,7 +225,7 @@
                         </a>
                      </li>
                      <li >
-                        <a href="index.html">
+                        <a href="/works/index.html">
                            <p class="siteMap_en">
                               WORKS
                            </p>
@@ -235,7 +235,7 @@
                         </a>
                      </li>
                      <li >
-                        <a href="index.html">
+                        <a href="/recruit/index.html">
                            <p class="siteMap_en">
                               RECRUIT
                            </p>
