--- a/donatello.com/business/index.html
+++ b/donatello.com/business/index.html
@@ -35,7 +35,7 @@
       <meta name="twitter:title" content="">
       <meta name="twitter:description" content="twitter: des">
       <meta name="twitter:image" content="">
-      <link rel="shortcut icon" href=""> 
+      <link rel="shortcut icon" href="../common/img/favicon.png"> 
 </head>
 <body class="business">
    <div id="loadingAnim"><svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="90.302px" height="100px" viewBox="0 0 90.302 100" xml:space="preserve"><circle class="loadingAnim_circle" cx="0" cy="0" r="5"><animateMotion dur="2s" repeatCount="indefinite"><mpath xlink:href="#targetPath"></mpath></animateMotion></circle><path id="targetPath" class="loadingAnim_path" d="M45.151,2.91c-2.152,0-4.298,0.466-5.924,1.41L8.552,22.028c-3.258,1.881-5.925,6.499-5.925,10.261v35.423 c0,3.762,2.667,8.38,5.925,10.261l30.674,17.709c1.626,0.943, .772,1.408,5.924,1.408c2.146,0,4.293-0.465,5.924-1.408 l30.67-17.709c3.263-1.881,5.93-6.499,5.93-10.261V32.289c0-.762-2.667-8.38-5.93-10.261L51.075,4.319 C49.444,3.375,47.296,2.91,45.151,2.91L45.151,2.91z"/><text class="loadnigAnim_text" x="46.5" y="55" text-anchor="middle">LOADING..</text></svg></div>   
@@ -467,7 +467,7 @@
                   <address class="address">
                      東京都港区白金1-15-29 天翔白金ビル203 <a href="https://goo.gl/maps/wRooUCdp5B82" target="_blank"><i class="icon-address"></i></a>
                   </address>
-                  <a href="" class="button -inquiry">
+                  <a href="mailto:info@donatello.jp?subject=サイトからのお問い合わせ&amp;body=【会社名】  %0d%0a%0d%0a【お名前】%0d%0a%0d%0a【お問い合わせ内容】%0d%0a例：SESについて… 開発の依頼について…%0d%0a%0d%0a" class="button -inquiry">
                      <button role="link" >
                         システム開発、SESのお問い合わせ
                      </button>
