--- a/donatello.com/inquiry/index.html
+++ b/donatello.com/inquiry/index.html
@@ -155,7 +155,7 @@
          <!-- *** about -->
          <section id="supported" class="section -message">
             <article>
-               <header class="section_index">
+               <header class="section_index ef ef-main">
                 <h3>
                   <span class="section_index_en">
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="430px" height="30px" text-anchor="middle" viewBox="0 0 430 30">
@@ -164,27 +164,31 @@
                </h3>
                </header>
                <div class="section_content wrap">
-                  <p class="intro">
-                     <strong>私たち、株式会社Donatelloは、<br>
-                        お客様の業務を分析し、受託システム開発、SESを通じ<br>
-                        業務効率化・属人的ミスを軽減するための最適なシステムを提案いたします。</strong>
-                  </p>
-                  <p>
-                     「新規ビジネスにどうしてもシステム開発が必要…でも、発注先に困っている」<br>
-                     「人手が足りなくて、開発スピードが遅い」<br>
-                  「業務の効率化にこんなアイデアがある！けれど、エンジニアが社内にいない…」</p>
-                  <p>このメッセージをご覧の御社のような先進的なテクノロジーや、<br>あなたのイメージする、人々を豊かにするアイディア。<br>プロジェクトが動いている、また、新しいものが産まれる現場に、よくある事態です。</p>
-                  <p>そんなとき、私たちが力になります。</p>
-                  <p>10年以上のシステム開発経験を持つDonatelloが、<br>現場にイノベーションのキーを提供します。     
-                  </p>
-                  <p>
-                     受託開発、エンジニア育成、マネージメント。
-                  </p>
-                  <p>
-                     Donatelloの培ったスキルで、プロジェクトの成功、改善をバックアップいたします。<br>
-                     まずはお気軽にお問い合わせくださいませ。
-                  </p>
-                  <div class="toEntry">
+                  <div class="ef ef-floatup">
+                     <p class="intro">
+                        <strong>私たち、株式会社Donatelloは、<br>
+                           お客様の業務を分析し、受託システム開発、SESを通じ<br>
+                           業務効率化・属人的ミスを軽減するための最適なシステムを提案いたします。</strong>
+                     </p>
+                  </div>
+                  <div class="ef ef-floatup">
+                     <p>
+                        「新規ビジネスにどうしてもシステム開発が必要…でも、発注先に困っている」<br>
+                        「人手が足りなくて、開発スピードが遅い」<br>
+                     「業務の効率化にこんなアイデアがある！けれど、エンジニアが社内にいない…」</p>
+                     <p>このメッセージをご覧の御社のような先進的なテクノロジーや、<br>あなたのイメージする、人々を豊かにするアイディア。<br>プロジェクトが動いている、また、新しいものが産まれる現場に、よくある事態です。</p>
+                     <p>そんなとき、私たちが力になります。</p>
+                     <p>10年以上のシステム開発経験を持つDonatelloが、<br>現場にイノベーションのキーを提供します。     
+                     </p>
+                     <p>
+                        受託開発、エンジニア育成、マネージメント。
+                     </p>
+                     <p>
+                        Donatelloの培ったスキルで、プロジェクトの成功、改善をバックアップいたします。<br>
+                        まずはお気軽にお問い合わせくださいませ。
+                     </p>
+                  </div>
+                  <div class="toEntry ef ef-floatup">
                      <div class="wrap">
                         
 <a href="mailto:info@donatello.jp?subject=サイトからのお問い合わせ&amp;body=【会社名】%0d%0a  %0d%0a【お名前】%0d%0a%0d%0a【ご連絡先】%0d%0aお電話： / メール：%0d%0a%0d%0a【ご連絡可能な時間帯】%0d%0a可能：○○時〜○○時 / 不可：○○時〜○○時%0d%0a%0d%0a【お問い合わせ内容】%0d%0a例：SESについて… 開発の依頼について…%0d%0a%0d%0a" class="button -inquiry -toEnter"><button role="link" >お問合わせはこちら</button><svg version="1.1" class="button_arrow" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="2px" viewBox="0 0 15 2"><polyline fill="none" stroke="#FFF" stroke-miterlimit="10" points="0,2 15,2 13,0"/></svg></a> 
