about テキスト挿入

--- a/donatello.com/about/index.html
+++ b/donatello.com/about/index.html
@@ -194,7 +194,7 @@
                                  学習
                               </dt>
                               <dd class="philosophyList_content">
-                                 あああああああああああ
+                                 日々の積み重ねを意識した技術習熟を意識します。
                               </dd>
                            </dl>
                         </li>
@@ -204,7 +204,7 @@
                                  教育
                               </dt>
                               <dd class="philosophyList_content">
-                                 あああああああああああ
+                                 技術を次世代へと繋ぎます。
                               </dd>
                            </dl>
                         </li>
@@ -214,7 +214,7 @@
                                  創造
                               </dt>
                               <dd class="philosophyList_content">
-                                 あああああああああああ
+                                 新しい技術を積極的に追い求めます。
                               </dd>
                            </dl>
                         </li>
@@ -224,7 +224,7 @@
                                  道徳
                               </dt>
                               <dd class="philosophyList_content">
-                                 あああああああああああ
+                                 相手の立場になり、伝えかたに工夫を行います。
                               </dd>
                            </dl>
                         </li>
@@ -234,7 +234,7 @@
                                  連携
                               </dt>
                               <dd class="philosophyList_content">
-                                 あああああああああああ
+                                 情報共有を活発にし、効率を重視します。
                               </dd>
                            </dl>
                         </li>
@@ -244,7 +244,7 @@
                                  管理
                               </dt>
                               <dd class="philosophyList_content">
-                                 あああああああああああ
+                                 個人のレベルを把握し、計画を立てて行動します。
                               </dd>
                            </dl>
                         </li>
