--- a/donatello.com/index.html
+++ b/donatello.com/index.html
@@ -169,22 +169,7 @@
          <!-- ///// mainvisual  -->
          <section class="topics">
             <div class="wrap">
-               <div id="topicsWrapper">
-                  <div class="update">
-                     <a href="">
-                        <dl>
-                           <dt class="update_date">2017.12.15</dt><dd class="update_info">アップデート情報</dd>
-                        </dl>
-                     </a>
-                  </div>
-                  <div class="update">
-                     <a href="">
-                        <dl>
-                           <dt class="update_date">2017.12.31</dt><dd class="update_info">アップデート情報</dd>
-                        </dl>
-                     </a>
-                  </div>         
-               </div>
+               <div id="topicsWrapper"></div>
             </div>
          </section>
          <section class="introduction">
